homepage name corrected

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://pratik6059.github.io/portfolio",
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://pratik6059.github.io/portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
